Fixed site responsiveness to work on Desktop, as well as keep the previous functionality

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3389,8 +3389,8 @@
 		-ms-justify-content: center;
 		justify-content: center;
 		cursor: default;
-		height: 100vh;
 		min-height: 35em;
+		padding-top: 5vh;
 		overflow: hidden;
 		position: relative;
 		text-align: center;
