--- a/assets/css/bar.css
+++ b/assets/css/bar.css
@@ -90,3 +90,17 @@ h3:before {
   padding: 15px;
   color: white;
 }
+
+.videoWrapper {
+	position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
+}
+.videoWrapper iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
