--- a/assets/css/bar.css
+++ b/assets/css/bar.css
@@ -1,9 +1,6 @@
 #background  {
     padding: 12em 0 10em 0;
-    background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(../../images/bar_beers.jpg);
-    background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(../../images/bar_beers.jpg);
-    background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(../../images/bar_beers.jpg);
-    background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(../../images/bar_beers.jpg);
+    background-image: url(../../images/bar_beers.jpg);
     background-attachment: fixed;
     background-position: center bottom;
     background-repeat: no-repeat;
@@ -49,11 +46,6 @@
 
   #background {
     padding: 10em 3em 10em 3em ;
-    background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(../../images/bar_beers_320.jpg);
-    background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(../../images/bar_beers_320.jpg);
-    background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(../../images/bar_beers_320.jpg);
-    background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(../../images/bar_beers_320.jpg);
-
   }
 
 }
