--- a/assets/css/bar.css
+++ b/assets/css/bar.css
@@ -1,12 +1,15 @@
 #background  {
     padding: 12em 0 10em 0;
-    background-image: url(../../images/bar_beers.jpg);
+    background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(../../images/bar_beers.jpg);
+    background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(../../images/bar_beers.jpg);
+    background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(../../images/bar_beers.jpg);
     background-attachment: fixed;
     background-position: center bottom;
     background-repeat: no-repeat;
-    background-size: cover;
     text-align: center;
-    max-width: 100%
+    background-size: auto;
+    height: 50%;
+    width: 100%;
 }
 
 
