--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3797,3 +3797,11 @@
 	body.is-mobile.landing #footer {
 		background-color: #1d242a;
 	}
+
+	#border {
+	  border: 5px solid;
+	  border-color: #69C3F7;
+	  display: inline-block;
+	  padding: 15px;
+	  color: white;
+	}
