Fixing tweet button

--- a/assets/css/descarga.css
+++ b/assets/css/descarga.css
@@ -3,3 +3,11 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+
+
+.buttons {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
